<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChatX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">sign-up?</string>
    <string name="chatx">ChatX</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="contacts">Contacts</string>
    <string name="saved_messages">Saved Messages</string>
</resources>