<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/appbg"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ChatX"
        android:textSize="50sp"
        android:fontFamily="@font/egallake"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:textColor="@color/primary_dark"

        />

<!--        <ImageView-->
<!--            android:id="@+id/logoImage"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginBottom="100dp"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:maxHeight="100dp"-->
<!--            android:maxWidth="200dp"-->
<!--            android:src="@drawable/logochatx"/>-->







    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:fontFamily="@font/brooklynnormal1"
            android:inputType="textEmailAddress"
            android:padding="14dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="18dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:fontFamily="@font/brooklynnormal1"
            android:padding="14dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/brooklynheavy1"
        android:textSize="20sp"
        android:padding="12dp"/>


    <TextView
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/primary" />

</LinearLayout>
